[package]
name = "paperhunt"
version = "0.1.0"
edition = "2021"
description = "Multi-source academic paper search and download library (arXiv, OpenAlex, Semantic Scholar)"
license = "MIT"
repository = "https://github.com/tokimo-lab/tokimo-package-paperhunt"
homepage = "https://github.com/tokimo-lab/tokimo-package-paperhunt"
keywords = ["papers", "academic", "arxiv", "search", "download"]
categories = ["science"]

[lib]
name = "paperhunt"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
